se agregan detalles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>3-Point</title>
 </head>
 
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="/images/logo.png" alt="logo">
+                    <img src="./images/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,16 +32,16 @@
                             <a class="nav-link " aria-current="page" href="index.html">inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="/pages/productos.html">productos</a>
+                            <a class="nav-link " href="./pages/productos.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="/pages/sobre-nosotros.html">sobre nosotros</a>
+                            <a class="nav-link " href="./pages/sobre-nosotros.html">sobre nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="/pages/contacto.html">contacto</a>
+                            <a class="nav-link " href="./pages/contacto.html">contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="/pages/nuestros-clientes.html">nuestros clientes</a>
+                            <a class="nav-link " href="./pages/nuestros-clientes.html">nuestros clientes</a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
 
     <!-- BANNER -->
     <section class="banner">
-        <div class="banner-img"><img src="/images/banner.jpg"></div>
+        <div class="banner-img"><img src="./images/banner.jpg"></div>
         <h1>conseguí lo mejor de la nba para vos</h1>
     </section>
 
@@ -62,17 +62,17 @@
         <h2 class="categorias-titulo">mejores categorías</h1>
         <div class="categorias-contenido">
             <div class="categoria-uno">
-                <img src="/images/jersey.jpg">
+                <img src="./images/jersey.jpg">
                 <h2 class="categoria-txt">camisetas</h2>
                 <a href="#" class="categoria-btn">ver más</a>
             </div>
             <div class="categoria-dos">
-                <img src="/images/shoes.jpg">
+                <img src="./images/shoes.jpg">
                 <h2 class="categoria-txt">zapatillas</h2>
                 <a href="#" class="categoria-btn">ver más</a>
             </div>
             <div class="categoria-tres">
-                <img src="/images/short.jpg">
+                <img src="./images/short.jpg">
                 <h2 class="categoria-txt">shorts</h2>
                 <a href="#" class="categoria-btn">ver más</a>
             </div>
