--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>3-Point</title>
 </head>
 
@@ -18,8 +18,8 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/logo.png" alt="logo">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../images/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="/index.html">inicio</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="productos.html">productos</a>
