--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>3-Point</title>
 </head>
 
@@ -18,8 +18,8 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg border-bottom border-body" data-bs-theme="dark"">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/logo.png" alt="logo">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../images/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="/index.html">inicio</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="productos.html">productos</a>
@@ -55,7 +55,7 @@
             <!-- PRODUCTOS -->
             <div class="productos-contenido">
                 <div class="producto">
-                    <img src="/images/producto-1.jpg">
+                    <img src="../images/producto-1.jpg">
                     <div class="producto-txt">
                         <h3>short chicago bulls</h3>
                         <div class="producto-precio">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-2.png">
+                    <img src="../images/producto-2.png">
                     <div class="producto-txt">
                         <h3>short orlando magic</h3>
                         <div class="producto-precio">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-3.jpg">
+                    <img src="../images/producto-3.jpg">
                     <div class="producto-txt">
                         <h3>camiseta boston celtics</h3>
                         <div class="producto-precio">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-4.png">
+                    <img src="../images/producto-4.png">
                     <div class="producto-txt">
                         <h3>camiseta dallas mavericks</h3>
                         <div class="producto-precio">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-5.jpg">
+                    <img src="../images/producto-5.jpg">
                     <div class="producto-txt">
                         <h3>zapatillas lebron 18</h3>
                         <div class="producto-precio">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-6.png">
+                    <img src="../images/producto-6.png">
                     <div class="producto-txt">
                         <h3>bolso los angeles lakers</h3>
                         <div class="producto-precio">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-7.webp">
+                    <img src="../images/producto-7.webp">
                     <div class="producto-txt">
                         <h3>zapatillas kobe 6</h3>
                         <div class="producto-precio">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-8.webp">
+                    <img src="../images/producto-8.webp">
                     <div class="producto-txt">
                         <h3>gorra new york knicks</h3>
                         <div class="producto-precio">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img src="/images/producto-9.png">
+                    <img src="../images/producto-9.png">
                     <div class="producto-txt">
                         <h3>medias clásicas nba</h3>
                         <div class="producto-precio">
