--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>3-Point</title>
 </head>
 
@@ -18,8 +18,8 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg border-bottom border-body" data-bs-theme="dark"">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/logo.png" alt="logo">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../images/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="/index.html">inicio</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="productos.html">productos</a>
@@ -55,7 +55,7 @@
         <section class="sobre-nosotros-contenido">
             <h1>conócenos un poco más</h1>
             <div class="seccion">
-                <div class="seccion-img"><img src="/images/quienes-somos.webp"></div>
+                <div class="seccion-img"><img src="../images/quienes-somos.webp"></div>
                 <div class="seccion-contenido">
                     <h2 class="seccion-titulo">quienes somos</h2>
                     <p class="seccion-txt">
@@ -82,12 +82,12 @@
                         día a día, con artículos que representen su equipo y jugadores favoritos.
                     </p>
                 </div>
-                <div class="seccion-img"><img src="/images/nuestra-mision.webp"></div>
+                <div class="seccion-img"><img src="../images/nuestra-mision.webp"></div>
             </div>
 
 
             <div class="seccion">
-                <div class="seccion-img"><img src="/images/nuestros-valores.webp"></div>
+                <div class="seccion-img"><img src="../images/nuestros-valores.webp"></div>
                 <div class="seccion-contenido">
                     <h2 class="seccion-titulo">nuestros valores</h2>
                     <p class="seccion-txt">
@@ -117,7 +117,7 @@
                         sea que seas fan de los Lakers, los Celtics, o cualquier equipo de la NBA.
                     </p>
                 </div>
-                <div class="seccion-img"><img src="/images/por-que-elegirnos.webp"></div>
+                <div class="seccion-img"><img src="../images/por-que-elegirnos.webp"></div>
             </div>
         </section>
     </main>
